// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Component Tooltip renders 1`] = `
<div>
  CHILDREN
  <div>
    TOOLTIP
  </div>
</div>
`;

exports[`Tooltip Component Tooltip renders disabled 1`] = `
<div>
  CHILDREN
</div>
`;

exports[`Tooltip Component Tooltip renders with empty tooltip 1`] = `
<div>
  CHILDREN
</div>
`;
